prometheus-metric-storage/tests/compile_fail/duplicate_label.stderr
error: duplicate label
 --> tests/compile_fail/duplicate_label.rs:4:24
  |
4 | #[metric(labels("env", "env"))]
  |                        ^^^^^
